fix button spacing

--- a/static/spectrum.css
+++ b/static/spectrum.css
@@ -161,4 +161,5 @@ button:hover {
 
 .control-buttons {
   justify-content: space-evenly;
+  width: 80%;
 }
